default/objects/LongForm_Offer_Item__c/LongForm_Offer_Item__c.object-meta.xml
<CustomObject>
    <label>LongForm Offer Item</label>
    <nameField>
        <displayFormat>LFOFRI-{00000}</displayFormat>
        <label>LongForm Offer Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LongForm Offer Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>