default/objects/LongForm_Offer_Item__c/fields/Applied_For_Filter__c.field-meta.xml
<CustomField>
    <fullName>Applied_For_Filter__c</fullName>
    <label>Applied For Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>