default/objects/LongForm_Offer_Item__c/fields/Apply_Filter__c.field-meta.xml
<CustomField>
    <fullName>Apply_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Filter</label>
    <type>Checkbox</type>
</CustomField>