default/objects/LongForm_Offer_Item__c/fields/Basic_Filter__c.field-meta.xml
<CustomField>
    <fullName>Basic_Filter__c</fullName>
    <label>Basic Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Fuel + Volume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>