default/objects/LongForm_Offer_Item__c/fields/Check_Fuel_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Check_Fuel_Consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Fuel Consumption</label>
    <type>Checkbox</type>
</CustomField>