default/objects/LongForm_Offer_Item__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tariff__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>$</fullName>
            </value>
            <value>
                <fullName>€</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>