default/objects/LongForm_Offer_Item__c/fields/Fuel_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Type_Filter__c</fullName>
    <label>Fuel Type Filter</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All fuel types</fullName>
            </value>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>Diesel (all types)</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Diesel (AGO)</fullName>
            </value>
            <value>
                <fullName>Diesel (AGO Low Sulphur)</fullName>
            </value>
            <value>
                <fullName>Diesel (V-Power)</fullName>
            </value>
            <value>
                <fullName>Diesel (Bio)</fullName>
            </value>
            <value>
                <fullName>Diesel (Plus)</fullName>
            </value>
            <value>
                <fullName>Diesel (for trucks)</fullName>
            </value>
            <value>
                <fullName>MOGAS (all types)</fullName>
            </value>
            <value>
                <fullName>MOGAS (leaded &amp; unleaded)</fullName>
            </value>
            <value>
                <fullName>MOGAS (leaded)</fullName>
            </value>
            <value>
                <fullName>MOGAS (unleaded)</fullName>
            </value>
            <value>
                <fullName>Gas Fuel (all types)</fullName>
            </value>
            <value>
                <fullName>Gas Fuel (LPG)</fullName>
            </value>
            <value>
                <fullName>Gas Fuel (CNG)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>