default/objects/LongForm_Offer_Item__c/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>Germany &amp; Europe</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>Netherlands &amp; Europe</fullName>
            </value>
            <value>
                <fullName>Switzerland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>