default/objects/LongForm_Offer_Item__c/fields/Long_Form_Offer__c.field-meta.xml
<CustomField>
    <fullName>Long_Form_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Long Form Offer</label>
    <referenceTo>LongForm_Offer__c</referenceTo>
    <relationshipName>Long_Form_Offer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>