default/objects/LongForm_Offer_Item__c/fields/Rate_Per__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per__c</fullName>
    <label>Rate Per</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Liter</fullName>
            </value>
            <value>
                <fullName>100 Liters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>