default/objects/LongForm_Offer_Item__c/fields/Stations__c.field-meta.xml
<CustomField>
    <fullName>Stations__c</fullName>
    <label>Stations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell (Home Station)</fullName>
            </value>
            <value>
                <fullName>Shell (All Stations)</fullName>
            </value>
            <value>
                <fullName>Shell &amp; Partners</fullName>
            </value>
            <value>
                <fullName>Not specified yet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>