default/objects/LongForm_Offer_Item__c/fields/Tariff__c.field-meta.xml
<CustomField>
    <fullName>Tariff__c</fullName>
    <label>Tariff</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>