default/objects/LongForm_Offer_Item__c/fields/Time_Filter__c.field-meta.xml
<CustomField>
    <fullName>Time_Filter__c</fullName>
    <label>Time Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>4 Months</fullName>
            </value>
            <value>
                <fullName>5 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>7 Months</fullName>
            </value>
            <value>
                <fullName>8 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>10 Months</fullName>
            </value>
            <value>
                <fullName>11 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>