default/objects/LongForm_Offer_Item__c/fields/Volume_Amount_Filter__c.field-meta.xml
<CustomField>
    <fullName>Volume_Amount_Filter__c</fullName>
    <label>Volume Amount Filter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>