default/objects/LongForm_Offer_Item__c/fields/Volume_Operator_Filter__c.field-meta.xml
<CustomField>
    <fullName>Volume_Operator_Filter__c</fullName>
    <label>Volume Operator Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlimited</fullName>
            </value>
            <value>
                <fullName>more than [X] liters</fullName>
            </value>
            <value>
                <fullName>more than [X] liters per 1 month</fullName>
            </value>
            <value>
                <fullName>more than [X] liters per 1 card</fullName>
            </value>
            <value>
                <fullName>more than [X] liters per account company</fullName>
                <label>more than [X] liters per account\company</label>
            </value>
            <value>
                <fullName>not more than [X] liters</fullName>
            </value>
            <value>
                <fullName>not more than [X] liters per 1 month</fullName>
            </value>
            <value>
                <fullName>not more than [X] liters per 1 card</fullName>
            </value>
            <value>
                <fullName>not more than [X] liters per account company</fullName>
                <label>not more than [X] liters per account\company</label>
            </value>
            <value>
                <fullName>only for [X] liters</fullName>
            </value>
            <value>
                <fullName>only for [X] liters per 1 month</fullName>
            </value>
            <value>
                <fullName>only for [X] liters per 1 card</fullName>
            </value>
            <value>
                <fullName>only for [X] liters per account company</fullName>
                <label>only for [X] liters per account\company</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>